--- a/package.json
+++ b/package.json
@@ -31,12 +31,14 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "babel-core": "^6.25.0",
+    "babel-core": "^6.26.0",
     "babel-preset-env": "^1.6.0",
     "babel-preset-es2015": "^6.24.1",
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
     "del": "^3.0.0",
+    "electron": "^1.7.6",
+    "eslint": "^4.7.0",
     "eslint-plugin-jasmine": "^2.8.4",
     "gulp": "^3.9.1",
     "gulp-babel": "^7.0.0",
@@ -48,15 +50,20 @@
     "gulp-git": "^2.4.2",
     "gulp-istanbul": "^1.1.2",
     "gulp-jasmine": "^2.4.2",
-    "gulp-jasmine-browser": "^1.9.0",
     "gulp-load-plugins": "^1.5.0",
-    "gulp-sourcemaps": "^2.6.0",
+    "gulp-sourcemaps": "^2.6.1",
     "gulp-uglify": "^3.0.0",
     "gulp-util": "^3.0.8",
+    "jasmine-core": "^2.8.0",
     "jasmine-reporters": "^2.2.1",
+    "karma": "^1.7.1",
+    "karma-electron": "^5.2.1",
+    "karma-jasmine": "^1.1.0",
+    "karma-requirejs": "^1.1.0",
     "minimatch": "^3.0.4",
+    "requirejs": "^2.1.0",
     "rewire": "^2.5.2",
-    "uglify-js": "^2.6.2",
+    "uglify-js": "^2.8.29",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
